<resources>
    <string name="app_name">CutScad</string>
    <string name="textHeaderStart">Welcome!</string>
    <string name="hintStart">Tap any of the food categories listed below to have a look at your inventory.</string>
    <string name="dairy">Dairy</string>
    <string name="cereals">Cereals</string>
    <string name="vegetables">Vegetables</string>
    <string name="fruits">Fruits</string>
    <string name="meat">Meat</string>
    <string name="seafood">Seafood</string>
    <string name="sugaryFoods">Sugary foods</string>
    <string name="alcohol">Alcohol</string>
    <string name="inventory">Inventory</string>
    <string name="addButtonInventory">Add product list</string>
    <string name="milk">Milk</string>
    <string name="newCategory">New list</string>
    <string name="categoryName">List name:</string>
    <string name="nameFieldHintPUC">type in category\'s name</string>
    <string name="lifespanPUC">Average lifespan:</string>
    <string name="days">days</string>
    <string name="weeks">weeks</string>
    <string name="lifespanFieldHintPUC">e.g. 10</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="noListsP1">You do not have any product lists yet, tap</string>
    <string name="noListsP2">to add a new list to this food category.</string>
    <string name="noProductsList">There are no products in this list yet.</string>
    <string name="productHeader">Milk</string>
    <string name="addButtonProduct">Add Product</string>
    <string name="noProductsP1">You do not have any products yet, tap</string>
    <string name="noProductsP2">to add a new product to this list.</string>
    <string name="purchaseDateHeader">Purchase date:</string>
    <string name="purchaseDate">27.05.2019</string>
    <string name="daysAgo">7 days ago</string>
    <string name="expirationDateHeader">Expiration date:</string>
    <string name="expirationDate">03.06.2019</string>
    <string name="zero">0</string>
    <string name="lifespanText">Product lifespan:</string>
    <string name="lifespanValue">7 days</string>
    <string name="weightText">Weight:</string>
    <string name="weightValue">0.5 kg</string>
    <string name="throwProduct">Throw</string>
    <string name="edit">Edit</string>
    <string name="left">Left</string>
    <string name="updateButton">Update</string>
    <string name="deleteListHeader">Confirm deletion</string>
    <string name="deleteListMessage">Are you sure you want to delete this list? All the data
        associated with it will be deleted and can not be recovered.</string>
    <string name="deleteProductHeader">Throw confirmation</string>
    <string name="deleteProductMessage">Are you sure you want to throw this product? All its data
        will be deleted and can not be recovered.</string>
    <string name="delete">Delete</string>
    <string name="newProduct">New product</string>
    <string name="purchaseDateText">Purchase date:</string>
    <string name="purchaseDateFieldHint">dd/mm/yyyy</string>
    <string name="kg">kg</string>
    <string name="weightFieldHint">e.g. 0.5</string>
    <string name="percentage">100%</string>
</resources>
