<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PopUpProductActivity">

    <LinearLayout
        android:id="@+id/popUpProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/pop_up_window"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/headerPUP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/headerTextPUP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_pro_bold"
                android:text="@string/newProduct"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="34sp" />

            <View
                android:id="@+id/headerSeparatorPUP"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/purchaseDatePUP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/purchaseDateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/segoe_pro_semilight"
                android:text="@string/purchaseDateText"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/purchaseDateField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/text_field"
                android:ems="10"
                android:fontFamily="@font/segoe_pro_semilight"
                android:hint="@string/purchaseDateFieldHint"
                android:inputType="date|none"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/weightPUP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/weightText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/segoe_pro_semilight"
                android:text="@string/weightText"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/weightFieldBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="start|center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/weightField"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_field"
                    android:ems="10"
                    android:fontFamily="@font/segoe_pro_semilight"
                    android:hint="@string/weightFieldHint"
                    android:inputType="numberDecimal"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/kgText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/segoe_pro_semilight"
                    android:text="@string/kg"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonsPUP"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButtonPUP"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@drawable/red_stroke_button"
                android:fontFamily="@font/segoe_pro_semilight"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/addButtonPUP"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:background="@drawable/red_button"
                android:fontFamily="@font/segoe_pro_semilight"
                android:text="@string/add"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>