<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <include
        layout="@layout/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/headerStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textHeaderStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_pro_bold"
            android:text="@string/textHeaderStart"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black"
            android:textSize="34sp" />

        <View
            android:id="@+id/lineHeaderStart"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bodyStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerStart">

        <TextView
            android:id="@+id/hintStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_pro_light_italic"
            android:text="@string/hintStart"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/buttonsStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/buttonsRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="?android:attr/buttonBarStyle">

                <Button
                    android:id="@+id/dairyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/black_stroke_button"
                    android:fontFamily="@font/segoe_pro_bold"
                    android:text="@string/dairy"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/cerealsButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:background="@drawable/black_stroke_button"
                    android:fontFamily="@font/segoe_pro_bold"
                    android:paddingStart="-100dp"
                    android:paddingEnd="-100dp"
                    android:text="@string/cereals"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonsRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                style="?android:attr/buttonBarStyle">

                <Button
                    android:id="@+id/vegetablesButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/black_stroke_button"
                    android:fontFamily="@font/segoe_pro_bold"
                    android:paddingStart="-100dp"
                    android:paddingEnd="-100dp"
                    android:text="@string/vegetables"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/fruitsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:background="@drawable/black_stroke_button"
                    android:fontFamily="@font/segoe_pro_bold"
                    android:text="@string/fruits"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonsRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                style="?android:attr/buttonBarStyle">

                <Button
                    android:id="@+id/meatButton"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/black_stroke_button"
                    android:fontFamily="@font/segoe_pro_bold"
                    android:text="@string/meat"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/seafoodButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:background="@drawable/black_stroke_button"
                    android:fontFamily="@font/segoe_pro_bold"
                    android:paddingStart="-100dp"
                    android:paddingEnd="-100dp"
                    android:text="@string/seafood"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonsRow4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                style="?android:attr/buttonBarStyle">

                <Button
                    android:id="@+id/sugarButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/black_stroke_button"
                    android:fontFamily="@font/segoe_pro_bold"
                    android:paddingStart="-100dp"
                    android:paddingEnd="-100dp"
                    android:text="@string/sugaryFoods"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/alcoholButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:background="@drawable/black_stroke_button"
                    android:fontFamily="@font/segoe_pro_bold"
                    android:paddingStart="-100dp"
                    android:paddingEnd="-100dp"
                    android:text="@string/alcohol"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>